# Solidify

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  Solidify.cpp  Solidify.sln  Solidify.vcxproj  Solidify.vcxproj.filters  imgui.ini
Solidify/: Solidify.rc  Solidify.vcxproj  Solidify.vcxproj.filters  resource.h
Solidify/src/: Common.h  IMAGEIO.CPP  Timer.h  UI.CPP  gui.qrc  gui.ui  imageio.h  imageops.cpp  imageops.h  imageops_hwy.inl  main.cpp  moc_ui.cpp  pch.cpp  pch.h  processing.cpp  processing.h  pushpull.cpp  pushpull.h  pushpull_hwy.inl  qrc_gui.cpp  settings.cpp  settings.h  sldf_config.toml  solidify.cpp  solidify.h  threadpool.h  ui.h
cmake/: embed_binary.cmake
packaging/macos/: Info.plist.in  Solidify.entitlements
scripts/: package_macos.sh
src/: Solidify.cpp  Timer.h  app_config.toml  gui.ui  imageio.cpp  imageio.h  main.cpp  processing.cpp  processing.h  settings.cpp  settings.h  solidify.h  ui.cpp  ui.h
tests/: solidify_image_tests.cpp  solidify_processing_tests.cpp  solidify_pushpull_bench.cpp  solidify_pushpull_tests.cpp  solidify_settings_tests.cpp
